@@ -1,8 +1,9 @@
 2020-04-30 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_menu_item.c: Replace switch case with if/else in
-      geda_menu_item_position_menu. Utilize macro:
+      geda_menu_item_position_menu. Utilize macros:
 
+          * geda_get_widget_allocation
           * geda_get_container_border_width
 
 2020-04-29 Wiley E. Hill <wileyhill@gmail.com>
